--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "boilerplate",
+  "name": "reacttimer",
   "version": "1.0.0",
-  "description": "Simple React App",
+  "description": "Simple React Timer App",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
